--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,9 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 .container {
-  width: 70%;
-  margin: auto;
   text-align: center;
 }
 
@@ -13,7 +16,7 @@ body {
 }
 
 h1 {
-  margin: 30px;
+  margin: 2rem;
   font-family: "Lobster", cursive;
   text-shadow: 5px 0 #232931;
   font-size: 5rem;
@@ -24,6 +27,7 @@ p {
   font-size: 2rem;
   color: #4ecca3;
   font-family: "Indie Flower", cursive;
+  margin: 2rem;
 }
 
 img {
@@ -50,14 +54,31 @@ button:hover {
   transform: scale(1.05);
 }
 
-@media (max-width: 600px) {
+@media (max-width: 767px) {
   h1 {
-    font-size: 2.5rem;
-    margin: 0;
-    margin-top: 1rem;
+    font-size: 3rem;
+  }
+
+  img {
+    width: 60%;
   }
 
   button {
     padding: 10px 20px;
+  }
+}
+
+@media (max-width: 480px) {
+  h1 {
+    font-size: 2.5rem;
+    margin: 1rem;
+  }
+
+  img {
+    width: 50%;
+  }
+
+  button {
+    padding: 8px 16px;
   }
 }
